kubedef/appdep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vproapp
  labels:
    app: vproapp
spec:
  selector:
    matchLabels:
      app: vproapp
  replicas: 1
  template:
    metadata:
      labels:
        app: vproapp
    spec:
      initContainers: # Đã lùi vào 6 khoảng trắng (con của spec)
        - name: init-mydb
          image: busybox:latest
          command: ["sh", "-c", "until nslookup vprodb.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for vprodb; sleep 2; done"]
        - name: init-memcache
          image: busybox:latest
          command: ["sh", "-c", "until nslookup vprocache01.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for vpromc; sleep 2; done"]
        - name: init-rmq
          image: busybox:latest
          command: ["sh", "-c", "until nslookup vpromq01.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for vpromq01; sleep 2; done"]
      containers: # Đã lùi vào 6 khoảng trắng (ngang hàng với initContainers)
        - name: vproapp
          image: nickmkt25/vprofileapp
          imagePullPolicy: Always
          ports:
            - name: vproapp-port
              containerPort: 8080
