kubedef/rmqdep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpromq
  labels:
    app: vpromq
spec:
  selector:
    matchLabels:
      app: vpromq
  replicas: 1
  template:
    metadata:
      labels:
        app: vpromq
    spec:
    containers:
      - name: vpromq
        image: rabbitmq
        ports:
          - name: vpromq-port
            containerPort: 5672
