kubedef/memsvc.yml
apiVersion: v1
kind: Service
metadata:
  name: vprocache01
spec:
  selector:
    app: vpromc
  ports:
    - port: 11211 
      targetPort: vpromc-port 
      protocol: TCP
  type: ClusterIP
