kubedef/nginx-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: vproapp-service
spec:
  selector:
    app: vproapp
  type: NodePort
  ports:
    - port: 8080
      targetPort: vproapp-port
      protocol: TCP
      nodePort: 30001
